--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
             <p>
               <strong>ScummVM</strong> : compatible, en attente d'approbation pour fonctionner.
-              <span class="placeholder"><a href="https://bugs.scummvm.org/ticket/16398">[voir ticket sur ScummVM]</a></span>
+              <span class="placeholder"><a href="https://bugs.scummvm.org/ticket/16398" target="_blank" rel="noopener noreferrer">[voir ticket sur ScummVM]</a></span>
             </p>
             <p>Le patch ne peut fonctionner que sur la <strong>version anglaise</strong>, quelques soit son édition (la <strong>Definitive Update</strong> comporte les différentes versions dont l'anglaise)</p>
           </div>
@@ -173,14 +173,14 @@
               <div class="iframe-shell">
                 <iframe src="https://store.steampowered.com/widget/245390/" frameborder="0" width="646" height="190"></iframe>
               </div>
-              <a class="text-link" href="https://store.steampowered.com/app/245390/I_Have_No_Mouth_and_I_Must_Scream/" rel="noopener noreferrer">Lien Steam</a>
+              <a class="text-link" href="https://store.steampowered.com/app/245390/I_Have_No_Mouth_and_I_Must_Scream/" target="_blank" rel="noopener noreferrer">Lien Steam</a>
             </div>
 
             <div class="store">
               <h3>Autres liens:</h3>
               <td>
-                <tr>— <a class="text-link" href="https://www.gog.com/en/game/i_have_no_mouth_and_i_must_scream" rel="noopener noreferrer">GOG</a></tr><br />
-                <tr>— <a class="text-link" href="https://www.humblebundle.com/store/i-have-no-mouth-and-i-must-scream" rel="noopener noreferrer">Humble Bundle</a></tr>
+                <tr>— <a class="text-link" href="https://www.gog.com/en/game/i_have_no_mouth_and_i_must_scream" target="_blank" rel="noopener noreferrer">GOG</a></tr><br />
+                <tr>— <a class="text-link" href="https://www.humblebundle.com/store/i-have-no-mouth-and-i-must-scream" target="_blank" rel="noopener noreferrer">Humble Bundle</a></tr>
               </td>
             </div>
           </div>
