Add screenshots section to index.html
Added a new section for displaying screenshots with a grid layout.

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
       <nav class="top-nav" aria-label="Navigation principale">
         <a href="#telechargement">Téléchargement</a>
         <a href="#compatibilite">Compatibilité</a>
+        <a href="#captures">Captures</a>
         <a href="#acheter">Acheter le jeu</a>
         <a href="#infos">Infos</a>
       </nav>
@@ -158,6 +159,30 @@
             <p class="muted small">
               Vous pouvez aussi télécharger l'archive zip contenant le patch et aussi les scripts qui m'ont permis de faire la traduction et des versions à appliquer manuellement avec <em>zstd</em> de la traduction <span class="placeholder"><a href="https://github.com/DarkCenobyte/ihnm-fantrad-fr/releases/download/1.1/IHNMAIMS_patch_uncut_FR_v11.zip">[en cliquant ici]</a></span>
             </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="captures" class="screens">
+      <div class="container">
+        <div class="card">
+          <h2 class="section-title">Captures d'écran</h2>
+          <p class="muted">Aperçu du patch VOSTFR en jeu (4 captures).</p>
+    
+          <div class="screens-grid">
+            <a class="shot" href="assets/img/20251221150250_1.jpg">
+              <img src="assets/img/20251221150250_1.jpg" alt="Capture d’écran 1 — exemple VOSTFR" loading="lazy">
+            </a>
+            <a class="shot" href="assets/img/20251221150336_1.jpg">
+              <img src="assets/img/20251221150336_1.jpg" alt="Capture d’écran 2 — dialogue traduit" loading="lazy">
+            </a>
+            <a class="shot" href="assets/img/20251221150400_1.jpg">
+              <img src="assets/img/20251221150400_1.jpg" alt="Capture d’écran 3 — interface" loading="lazy">
+            </a>
+            <a class="shot" href="assets/img/20251218125228_1.jpg">
+              <img src="assets/img/20251218125228_1.jpg" alt="Capture d’écran 4 — sous-titres" loading="lazy">
+            </a>
           </div>
         </div>
       </div>
