--- a/index.html
+++ b/index.html
@@ -168,20 +168,19 @@
       <div class="container">
         <div class="card">
           <h2 class="section-title">Captures d'écran</h2>
-          <p class="muted">Aperçu du patch VOSTFR en jeu (4 captures).</p>
     
           <div class="screens-grid">
             <a class="shot" href="assets/img/20251221150250_1.jpg">
-              <img src="assets/img/20251221150250_1.jpg" alt="Capture d’écran 1 — exemple VOSTFR" loading="lazy">
+              <img src="assets/img/20251221150250_1.jpg" alt="Capture d’écran 1" loading="lazy">
             </a>
             <a class="shot" href="assets/img/20251221150336_1.jpg">
-              <img src="assets/img/20251221150336_1.jpg" alt="Capture d’écran 2 — dialogue traduit" loading="lazy">
+              <img src="assets/img/20251221150336_1.jpg" alt="Capture d’écran 2" loading="lazy">
             </a>
             <a class="shot" href="assets/img/20251221150400_1.jpg">
-              <img src="assets/img/20251221150400_1.jpg" alt="Capture d’écran 3 — interface" loading="lazy">
+              <img src="assets/img/20251221150400_1.jpg" alt="Capture d’écran 3" loading="lazy">
             </a>
             <a class="shot" href="assets/img/20251218125228_1.jpg">
-              <img src="assets/img/20251218125228_1.jpg" alt="Capture d’écran 4 — sous-titres" loading="lazy">
+              <img src="assets/img/20251218125228_1.jpg" alt="Capture d’écran 4" loading="lazy">
             </a>
           </div>
         </div>
