Update download links and translation corrections
Updated download links and corrected translation notes for version 1.2.

--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
           <div class="cta" id="telechargement">
             <h2 class="section-title">Télécharger</h2>
 
-            <a class="download" href="https://github.com/DarkCenobyte/ihnm-fantrad-fr/releases/download/1.1/IHNMAIMS_patch_uncut_FR_v11.exe" aria-label="Télécharger le patch">
+            <a class="download" href="https://github.com/DarkCenobyte/ihnm-fantrad-fr/releases/download/1.2/IHNMAIMS_patch_uncut_FR_v12.exe" aria-label="Télécharger le patch">
               <img src="assets/img/download-button.png" alt="Download (placeholder)" width="320" height="96" loading="lazy" />
             </a>
 
             <p class="muted small">
-              Vous pouvez aussi télécharger l'archive zip contenant le patch et aussi les scripts qui m'ont permis de faire la traduction et des versions à appliquer manuellement avec <em>zstd</em> de la traduction <span class="placeholder"><a href="https://github.com/DarkCenobyte/ihnm-fantrad-fr/releases/download/1.1/IHNMAIMS_patch_uncut_FR_v11.zip">[en cliquant ici]</a></span>
+              Vous pouvez aussi télécharger l'archive zip contenant le patch et aussi les scripts qui m'ont permis de faire la traduction et des versions à appliquer manuellement avec <em>zstd</em> de la traduction <span class="placeholder"><a href="https://github.com/DarkCenobyte/ihnm-fantrad-fr/releases/download/1.2/IHNMAIMS_patch_uncut_FR_v12.zip">[en cliquant ici]</a></span>
             </p>
           </div>
         </div>
@@ -224,13 +224,16 @@
                 v1.0<br />
                 — Première release<br />
                 v1.1<br />
-                — Correction de traduction (mots, grammaires, ...)<br />
+                — Correction de traductions (mots, grammaires, ...)<br />
                 — Traduction des actions combinés ("Donner ... à ..." et "Utiliser ... avec ...")<br />
                 — Traduction de menu de chargement/sauvegarde<br />
                 — Correction d'un glitch occurant lors du dernier niveau du jeu, lors du dialogue avec Surgat.<br />
                 — Création d'un patch dédié à ScummVM distinct du patch pour DOSBox.<br />
                 — Amélioration de l'outil d'installation du patch. (Détection de la présence de S.EXE ou S.prg pour les versions DosBox)<br />
                 — Ajout d'une nouvelle version du script de traduction des textes avec déduplication des pointeurs pour le dernier niveau (pour la version DosBox du patch)<br />
+                v1.2<br />
+                — Correction de traductions (mots, grammaires, ...), merci à PsykoSeb pour ses retours !<br />
+                — Mise à disposition des patches "raw" au format xdelta.<br />
               </p>
             </div>
           </details>
