Revise ScummVM compatibility details in index.html
Updated ScummVM compatibility information and download links.

--- a/index.html
+++ b/index.html
@@ -143,8 +143,9 @@
             </p>
 
             <p>
-              <strong>ScummVM</strong> : compatible, en attente d'approbation pour fonctionner.
-              <span class="placeholder"><a href="https://bugs.scummvm.org/ticket/16398" target="_blank" rel="noopener noreferrer">[voir ticket sur ScummVM]</a></span>
+              <strong>ScummVM</strong> : compatible, avec la branche master 2.x.x (et futures versions stables > 2.9.1).
+              <span class="placeholder"><a href="https://buildbot.scummvm.org/#/dailybuilds" target="_blank" rel="noopener noreferrer">[Télécharger une dailybuild de ScummVM compatible]</a></span><br />
+              <span class="placeholder">(Note: la version "future 3.0.X" ne dispose pas encore du support du patch, choisissez un build "ScummVM latest Branch master")</span>
             </p>
             <p>Le patch ne peut fonctionner que sur la <strong>version anglaise</strong>, quelques soit son édition (la <strong>Definitive Update</strong> comporte les différentes versions dont l'anglaise)</p>
           </div>
